<resources>
    <string name="app_name_release">GHMC Poll Status App</string>
    <string name="enter_6_digit_otp">Enter 6 digit OTP sent to</string>
    <string name="logged_with">Logged with</string>
    <string name="app_name_demo">GHMC Poll Status App - Demo</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">Submit</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="zone">Zone*</string>
    <string name="circle">Circle*</string>
    <string name="ward">Ward*</string>
    <string name="sector">Sector*</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
    <string name="ps_name">PS Name</string>
    <string name="total_hourly_report">Total Hourly Report</string>
    <string name="pending_hourly_report">Pending Hourly Report</string>
    <string name="no_records_found">No Records Found</string>

    <string name="con_time_out">The connection has timed out, please try again</string>
    <string name="something">Something went wrong, please try again</string>
    <string name="something_wrong_otp">Something went wrong, while receiving OTP</string>
    <string name="server_not">Server not responding, Please try later</string>
    <string name="enter_mob_no">Enter mobile No</string>
    <string name="enter_valid_mobile_no">Enter valid mobile No</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="search_fileno">Search by Polling Station</string>
    <string name="select_polling_station">Select Polling Station</string>
    <string name="select_time_slot">Select Time Slot</string>
    <string name="votes_polled_during_selected_hour">Votes polled during selected hour</string>
    <string name="enter_poll_count">Enter Poll count</string>
    <string name="exceeded">Entered polled votes should not exceed the Selected polling station count</string>
    <string name="ps_wise_entry">PS wise Entry</string>
    <string name="ps_wise_status">PS wise Status</string>
    <string name="data_empty">No Records Found</string>
    <string name="generate_4_digit_mpin">Set 4 Digit MPIN</string>
    <string name="proceed">Proceed</string>
    <string name="enter_4_digit_mpin">Enter 4-Digit MPIN</string>
    <string name="not_you">Not You</string>
    <string name="forgot_mpin">Forgot MPIN</string>
    <string name="validate">Validate</string>
    <string name="please_enter_4_digit_otp">Please enter 4-Digit OTP</string>
    <string name="please_enter_6_digit_otp">Please enter 6-Digit OTP</string>
    <string name="invalid_otp">Entered OTP is invalid, Please try again</string>
    <string name="invalid_mpin">Entered MPIN is invalid, Please try again</string>
    <string name="confirm_4_digit_mpin">Confirm 4-Digit MPIN</string>
    <string name="cancel_otp_process">Are you sure, Do you want cancel registration process?</string>
    <string name="cancel_mapping_process">Are you sure, Do you want cancel map sector process?</string>
    <string name="otpverified">OTP Verified Successfully</string>
    <string name="otpempty">OTP is empty from server</string>

    <string name="plz_check_int">No network connectivity found, please check your internet connection</string>
    <string name="please_enter_4_digit_mpin">Please enter 4-Digit MPIN</string>
    <string name="please_enter_4_digit_confirm_mpin">Please confirm 4-Digit MPIN</string>
    <string name="confirm_mpin">MPIN and confirm MPIN is not matched, Please try again</string>

    <string name="select">-Select-</string>
    <string name="sel_zone">Select Zone</string>
    <string name="sel_circle">Select Circle</string>
    <string name="sel_ward">Select Ward</string>
    <string name="sel_sector">Select Sector</string>
    <string name="home">Home</string>
    <string name="logout_menu">Exit</string>
    <string name="logout_from_app">Are you sure you want to exit from app?</string>
    <string name="no_zones_found">No zones found</string>
    <string name="no_circles_found">No circles found</string>
    <string name="no_wards_found">No wards found</string>
    <string name="no_sectors_found">No sectors found</string>
    <string name="no_pollings_found">No polling stations found</string>
    <string name="map_sector_title">Map Sector</string>
    <string name="ps_entry_title">PS Wise Entry</string>
    <string name="ps_status_title">PS Wise Status</string>
    <string name="download">Download</string>
    <string name="re_download">Re-Download</string>
    <string name="re_download_masters"><u>Re-Download Masters</u></string>

    <string name="ps_master">Polling Master</string>
    <string name="ps_sub_master">(Polling Stations &amp; Time Slots)</string>
    <string name="download_master">Download Masters</string>
    <string name="no_ps_data_found">No master polling stations found</string>
    <string name="no_time_slot_data_found">No master time slots found</string>
    <string name="master_message_success">Master data downloaded successfully</string>
    <string name="ps_download_message">Data not available for Polling Stations, Would you like to download the data?</string>
    <string name="time_slot_download_message">Data not available for Time Slots, Would you like to download the data?</string>
    <string name="get_details">Get Details</string>
    <string name="edit">Edit</string>
    <string name="sel_votes_polled_till_now">Select Votes Polled till now</string>
    <string name="sel_one_record">Select atleast one record</string>
    <string name="sel_time_slot_to_proceed">Select Time Slot to proceed</string>
    <string name="no_time_slots_found">No time slots found</string>
    <string name="ps_number">PS Number</string>
    <string name="polled_count">Entered Count</string>
    <string name="cancel">Cancel</string>
</resources>
