<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_home"
            android:icon="@drawable/home"
            android:title="@string/home"
            android:visible="true" />

        <item
            android:id="@+id/nav_ps_entry"
            android:icon="@drawable/polling"
            android:title="@string/ps_wise_entry" />
        <item
            android:id="@+id/nav_ps_report"
            android:icon="@drawable/status"
            android:title="@string/ps_wise_status" />


        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/logout"
            android:title="@string/logout_menu" />

    </group>


</menu>
