<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context=".MapSectorActivity">

        <include
            android:id="@+id/headerLyout"
            layout="@layout/activity_basic_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/headerLyout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_5dp">

                <LinearLayout
                    android:id="@+id/ll_zone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/elmessiri_regular"
                        android:padding="@dimen/dimen_5dp"
                        android:text="@string/zone"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_16sp" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/zone_spinner"
                        style="@style/Widget.App.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        app:theme="@style/ThemeOverlay.AppCompat.Light" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_circle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/elmessiri_regular"
                        android:padding="@dimen/dimen_5dp"
                        android:text="@string/circle"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_16sp" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/circle_spinner"
                        style="@style/Widget.App.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        app:theme="@style/ThemeOverlay.AppCompat.Light" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_ward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/elmessiri_regular"
                        android:padding="@dimen/dimen_5dp"
                        android:text="@string/ward"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_16sp" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/ward_spinner"
                        style="@style/Widget.App.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        app:theme="@style/ThemeOverlay.AppCompat.Light" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_sector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/elmessiri_regular"
                        android:padding="@dimen/dimen_5dp"
                        android:text="@string/sector"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_16sp" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/sector_spinner"
                        style="@style/Widget.App.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        app:theme="@style/ThemeOverlay.AppCompat.Light" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:orientation="horizontal">


                        <Button
                            android:id="@+id/btn_clear"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_20dp"
                            android:layout_marginRight="@dimen/dimen_20dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/clear"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            app:backgroundTint="@color/red" />


                        <Button
                            android:id="@+id/btn_submit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_20dp"
                            android:layout_marginRight="@dimen/dimen_20dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/submit"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            app:backgroundTint="@color/white" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent" />

    </RelativeLayout>
</layout>