<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    <data>-->

    <!--        <variable-->
    <!--            name="workLog"-->
    <!--            type="com.cgg.virtuo.model.response.ptms.view.ViewWorkLog" />-->

    <!--        <import type="android.view.View" />-->

    <!--    </data>-->


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/data_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/elmessiri_regular"
                        android:text="@string/ps_name"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/dimen_16sp" />

                    <!--                        android:text="@{workLog.date}"-->

                    <TextView
                        android:id="@+id/tv_poll_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/elmessiri_regular"
                        android:textSize="@dimen/dimen_16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_8dp">

                    <TextView
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/elmessiri_regular"
                        android:text="@string/total_hourly_report"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/dimen_16sp" />

                    <TextView
                        android:id="@+id/tv_tot_hou"
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/elmessiri_regular"
                        android:textSize="@dimen/dimen_16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_8dp">

                    <TextView
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/elmessiri_regular"
                        android:text="@string/pending_hourly_report"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/dimen_16sp" />

                    <TextView
                        android:id="@+id/tv_pen_hou"
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/elmessiri_regular"
                        android:textSize="@dimen/dimen_16sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</layout>