<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <include
            android:id="@+id/header"
            layout="@layout/activity_basic_layout" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dimen_10dp">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:visibility="visible"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimaryDark"
                            android:padding="10dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/dimen_50dp"
                                android:layout_height="@dimen/dimen_50dp"
                                android:layout_margin="@dimen/dimen_5dp"
                                android:background="@drawable/download"
                                android:padding="@dimen/dimen_10dp"
                                app:backgroundTint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/elmessiri_regular"
                                android:text="@string/ps_master"
                                android:textColor="@color/white"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/elmessiri_regular"
                                android:gravity="center_horizontal"
                                android:text="@string/ps_sub_master"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_ps_master"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/green"
                            android:fontFamily="@font/elmessiri_regular"
                            android:text="@string/download"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dimen_20sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>


        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:theme="@style/ProgressBarTheme"
            android:visibility="gone" />

    </RelativeLayout>
</layout>